--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,16 @@
-body {
-    margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #111111;
-    color: white;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
+/* Global */
 .button-link {
     background-color: green;
     color: white;
     border-radius: 10px;
     font-size: 22px;
     padding: 15px;
-}
-.button-link:hover {
-    background-color: #006400;
-}
-.button-link:active {
-    background-color: rgb(0, 75, 0);
+    &:hover {
+        background-color: #006400;
+    }
+    &:active {
+        background-color: rgb(0, 75, 0);
+    }
 }
 
 /* Navbar */
@@ -28,147 +18,223 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 10rem;
-    background-color: #00000080;
+    padding: 10px 5rem;
+    background-color: #00000090;
     position: sticky;
     overflow: visible;
     top: 0;
-}
-
-.pageLink {
-    display: flex;
-    gap: 100px;
-}
-.pageLink a {
-    font-size: 24px;
-    font-weight: 800;
-}
-.pageLink a:hover {
-    text-decoration: underline;
+    z-index: 2;
+    .pageLink {
+        display: flex;
+        gap: 100px;
+        a {
+            font-size: 24px;
+            font-weight: normal;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 /* Introduction */
-#main {
+.title-card {
     padding: 250px 0px;
     padding-left: 200px;
-}
-.title-card {
     font-size: 50px;
     line-height: 0.2;
 }
 
-/* Profil & Competences */
+/* Profil, Competences & Professionnelles */
 #profil {
-    background: radial-gradient(circle, rgba(0,0,75,1) 25%, rgba(17,17,17,1) 100%);
+    background: radial-gradient(circle, rgba(0,0,85,1) 25%, rgba(25,25,25,1) 100%);
     padding: 5rem 10rem;
     margin-top: 10rem;
-}
-
-.a-propos {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.a-propos h2 {
-    font-size: 30px;
-}
-.a-propos p {
-    text-align: justify;
-    font-size: 22px;
-    width: 800px;
-}
-.profile-link {
-    margin-top: 25px;
-}
-
-.competence {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10rem;
-}
-.competence h2 {
-    font-size: 30px;
-}
-
-.BoxCube {
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    border-radius: 20px;
-}
-.BoxCube h3 {
-    text-align: center;
-    font-size: 22px;
-}
-.small-gap {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    border: solid 5px black;
-    border-radius: 10px;
-    background-color: #11111180;
-    padding: 25px;
-}
-.row-box {
-    display: flex;
-    justify-content: space-around;
+    .a-propos {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        h2 {
+            font-size: 30px;
+        }
+        p {
+            text-align: justify;
+            line-height: 1.30;
+            font-size: 22px;
+            width: 800px;
+        }
+        .profile-link {
+            margin-top: 25px;
+        }
+    }
+    .competence {
+        margin-top: 10rem;
+        h2 {
+            font-size: 30px;
+        }
+        .BoxCube {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+            margin-top: 3rem;
+            .box {
+                background-color: #191919ad;
+                border-radius: 15px;
+                width: auto;
+                max-width: 500px;
+                padding: 20px;
+                h3 {
+                    margin: 0px 0px 15px 0px;
+                }
+                .small-gap {
+                    display: flex;
+                    justify-content: space-evenly;
+                    gap: 10px;
+                    align-items: center;
+                    img {
+                        width: 10%;
+                        height: 10%;
+                    }
+                }
+            }
+        }
+    }
+    .work {
+        margin-top: 5rem;
+        .work-content {
+            display: flex;
+            .work-header {
+                width: 80%;
+                h3 {
+                    font-size: 24px;
+                }
+                li {
+                    font-size: 22px;
+                }
+            }
+            .work-image {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: flex-end;
+                width: auto;
+                img {
+                    height: 30%;
+                    width: 40%;
+                }
+            }
+        }
+        h2 {
+            font-size: 30px;
+        }
+    }
 }
 
 /* Projets */
 #projets {
     background: radial-gradient(circle, rgba(75,0,75,1) 25%, rgba(17,17,17,1) 100%);
     padding: 5rem 10rem;
-    text-align: center;
     border-top: solid 5px black;
-}
-
-.gridBox {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-top: 3rem;
-}
-.smallBox {
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 4rem 8rem;
+    h2 {
+        font-size: 30px
+    }
+    .small-link {
+        text-align: center;
+        margin: 5rem 0rem;
+    }
+    .gridBox {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+        a[class^="background-"] {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 1rem;
+            width: 300px;
+            height: 200px;
+            color: black;
+            text-decoration: none;
+            font-size: 1.2rem;
+            font-weight: bold;
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-position: center;
+                filter: blur(0px);
+                transform: scale(1);
+                transition: filter 0.3s ease;
+                z-index: 0;
+            }
+            &:hover::before {
+                filter: blur(2px);
+                transform: scale(1.05);
+            }
+            span {
+                position: relative;
+                z-index: 1;
+            }
+        }
+        .background-1::before {
+            background-image: url('../images/screenshot_sncfCL.png');
+        }
+        .background-2::before {
+            background-image: url('../images/screenshot_sncfSite.png');
+        }
+        .background-3::before {
+            background-image: url('../images/screenshot_meteoapp.png');
+        }
+        .background-4::before {
+            background-image: url('../images/screenshot_gestiondestock.png');
+        }
+    }
 }
 
 /* Contact */
 #contact {
     padding: 5rem 10rem;
-}
-#contact h2 {
-    font-size: 30px;
-}
-
-.contact-content {
-    display: flex;
-    justify-content: space-between;
-}
-
-.contact-header {
-    max-width: 600px;
-}
-.contact-header p {
-    font-size: 22px;
-}
-.contact-list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: auto;
-}
-.contact-card-content {
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    border-radius: 10px;
-    background-color: #1d1d1d;
-    font-size: 20px;
-    padding: 0px 50px;
-}
-.contact-card-content:hover {
-    transform: rotate(3deg);
+    h2 {
+        font-size: 30px;
+    }
+    .contact-content {
+        display: flex;
+        justify-content: space-between;
+        .contact-header {
+            max-width: 600px;
+            p {
+                font-size: 22px;
+            }
+        }
+        .contact-list {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            width: auto;
+            .contact-card-content {
+                display: flex;
+                align-items: center;
+                gap: 50px;
+                border-radius: 10px;
+                background-color: #242424;
+                font-size: 20px;
+                padding: 0px 50px;
+                &:hover {
+                    transform: rotate(3deg);
+                }
+            }
+        }
+    }
 }
