--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ header {
     padding-left: 200px;
     font-size: 50px;
     line-height: 0.2;
+    transition: font-size 5s ease;
+    h1:hover {
+        transition: font-size 5s ease;
+        font-size: 100px;
+    }
 }
 
 /* Profil, Competences & Professionnelles */
@@ -93,8 +98,8 @@ header {
                     gap: 10px;
                     align-items: center;
                     img {
-                        width: 10%;
-                        height: 10%;
+                        width: 75px;
+                        /* height: 10%; */
                     }
                 }
             }
