--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -4,13 +4,15 @@ body {
     margin: 0;
 }
 h2 {
-    outline: 2px solid;
+    display: inline-block;
+    border: 2px solid;
     text-align: center;
     position: relative;
     top: 1em;
     left: 5em;
-    width: 12%;
+    width: auto;
     padding: 10px;
+    margin: 0;
 }
 a {
     color: black;
@@ -18,7 +20,7 @@ a {
 }
 .flexBox {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 25px;
     margin: 4em 10em;
@@ -29,24 +31,25 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #ffffffbf;
     position: sticky;
-    top: 1em;
+    top: 0;
     z-index: 1;
-    padding: 0em 2em;
+    padding: 1em 2em;
 }
 nav a {
     font-size: 18px;
 }
-nav .test {
+nav .github {
     transition: color 0.15s ease;
 }
-nav .test:hover {
-    color: white;
+nav .github:hover {
+    color: #787878;
 }
-nav .test2 {
+nav .linkedin {
     transition: color 0.15s ease;
 }
-nav .test2:hover {
+nav .linkedin:hover {
     color: #0a66c2;
 }
 nav .nav-link a {
@@ -88,6 +91,9 @@ nav .nav-link a:hover {
 }
 
 /* Profil  */
+#profil {
+    margin: 7em 0em;
+}
 #profil .a-propos {
     display: flex;
     justify-content: space-evenly;
@@ -124,12 +130,12 @@ nav .nav-link a:hover {
 #profil .a-propos img:hover {
     outline-offset: 10px;
 }
-#profil .paragraph {
-    font-size: 18px;
-    padding-left: 10em;
-}
 #profil .competence {
     margin: 5em 0em;
+}
+#profil .paragraph {
+    font-size: 20px;
+    padding-left: 10em;
 }
 #profil .competence .flexRow {
     outline: 2px solid;
@@ -152,8 +158,21 @@ nav .nav-link a:hover {
     align-items: center;
     gap: 10px;
 }
-#profil .competence article {
+#profil .competence .flexBox article {
+    background-color: white;
+    border: 2px solid;
+    box-shadow: 5px 5px;
+    text-align: center;
     width: 35%;
+    height: fit-content;
+    padding: 25px;
+    transition: transform 0.25s ease;
+}
+#profil .competence .flexBox article p {
+    font-size: 20px;
+}
+#profil .competence .flexBox article:hover {
+    transform: scale(1.25);
 }
 #profil .work {
     margin: 5em 0em;
@@ -187,6 +206,9 @@ nav .nav-link a:hover {
 }
 
 /* Projets */
+#projets {
+    margin: 5em 0em;
+}
 #projets .flexBox {
     flex-direction: column;
     align-items: center;
@@ -244,12 +266,13 @@ nav .nav-link a:hover {
 }
 #projets .boxCollection {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 2em 1em;
-    border: 2px solid;
+    gap: 1em 1em;
+    border-top: 2px solid;
+    border-bottom: 2px solid;
     background-color: #19191925;
-    width: 75%;
+    width: auto;
     padding: 15px 15px;
     margin: 5em auto;
 }
@@ -261,10 +284,13 @@ nav .nav-link a:hover {
 }
 
 /* Contact */
+#contact {
+    margin: 5em 0em;
+}
 #contact .contact-content {
     display: flex;
     justify-content: space-around;
-    margin-top: 3em;
+    margin-top: 2em;
 }
 #contact .contact-content .contact-article {
     font-size: 20px;
